backend.log
INFO:     Will watch for changes in these directories: ['/Users/jingyu/Documents/Sentry/backend']
INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [95351] using WatchFiles
/Users/jingyu/Documents/Sentry/backend/main.py:18: FutureWarning: 

All support for the `google.generativeai` package has ended. It will no longer be receiving 
updates or bug fixes. Please switch to the `google.genai` package as soon as possible.
See README for more details:

https://github.com/google-gemini/deprecated-generative-ai-python/blob/main/README.md

  import google.generativeai as genai
INFO:     Started server process [95354]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
✅ Gemini AI enabled (with vision)
✅ Yellowcake enabled (will fetch helpful resources)
✅ Sentry monitoring enabled
INFO:     127.0.0.1:49969 - "GET /health HTTP/1.1" 200 OK
INFO:     127.0.0.1:49975 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:49992 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:49997 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50007 - "GET /screenshots/439bbe9b-24c6-4b16-80be-8c4bcdbe82db.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50005 - "GET /screenshots/ad1a6659-9b2c-48c7-8626-b3235873bf0e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50008 - "GET /screenshots/9a011016-b812-44be-a8d0-a9d8c5d8712e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50009 - "GET /screenshots/2dbc9a06-ea27-408a-a849-6c18033dec1e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50006 - "GET /screenshots/3d8441b2-679c-4273-85f1-fcd6e128863e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50010 - "GET /screenshots/91c06680-6555-4353-a7df-450a89de5508.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:49981 - "POST /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:49981 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50015 - "GET /screenshots/3c3322e9-f076-4d5d-a76c-de37ebc018a9.png HTTP/1.1" 200 OK
INFO:     127.0.0.1:50022 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50032 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50041 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50052 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50062 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50066 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50070 - "GET /reports HTTP/1.1" 200 OK
WARNING:  WatchFiles detected changes in 'main.py'. Reloading...
INFO:     Shutting down
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [95354]
Process SpawnProcess-2:
Traceback (most recent call last):
  File "/opt/anaconda3/lib/python3.12/multiprocessing/process.py", line 314, in _bootstrap
    self.run()
  File "/opt/anaconda3/lib/python3.12/multiprocessing/process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/_subprocess.py", line 80, in subprocess_started
    target(sockets=sockets)
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/lib/python3.12/asyncio/runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/lib/python3.12/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/jingyu/Documents/Sentry/backend/.venv/lib/python3.12/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/jingyu/Documents/Sentry/backend/main.py", line 399
    if platform in ['ios', 'android', 'web']:
    ^^
SyntaxError: expected 'except' or 'finally' block
WARNING:  WatchFiles detected changes in 'main.py'. Reloading...
/Users/jingyu/Documents/Sentry/backend/main.py:18: FutureWarning: 

All support for the `google.generativeai` package has ended. It will no longer be receiving 
updates or bug fixes. Please switch to the `google.genai` package as soon as possible.
See README for more details:

https://github.com/google-gemini/deprecated-generative-ai-python/blob/main/README.md

  import google.generativeai as genai
INFO:     Started server process [95822]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
✅ Gemini AI enabled (with vision)
✅ Yellowcake enabled (will fetch helpful resources)
✅ Sentry monitoring enabled
INFO:     127.0.0.1:50077 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50092 - "GET /reports HTTP/1.1" 200 OK
INFO:     127.0.0.1:50098 - "GET /screenshots/3c3322e9-f076-4d5d-a76c-de37ebc018a9.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50097 - "GET /screenshots/439bbe9b-24c6-4b16-80be-8c4bcdbe82db.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50099 - "GET /screenshots/3d8441b2-679c-4273-85f1-fcd6e128863e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50099 - "GET /screenshots/9a011016-b812-44be-a8d0-a9d8c5d8712e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50098 - "GET /screenshots/2dbc9a06-ea27-408a-a849-6c18033dec1e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50099 - "GET /screenshots/ad1a6659-9b2c-48c7-8626-b3235873bf0e.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50099 - "GET /screenshots/91c06680-6555-4353-a7df-450a89de5508.png HTTP/1.1" 304 Not Modified
INFO:     127.0.0.1:50092 - "GET /reports HTTP/1.1" 200 OK
